<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/alap2"
            android:gravity="left">

            <TextView
                android:id="@+id/textFejlec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginLeft="5dp"
                android:text="@string/fejlec"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#66a3ff"
                android:textStyle="bold" />



            <ImageView
                android:id="@+id/imageViewExit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:src="@android:drawable/ic_menu_close_clear_cancel" />

        </RelativeLayout>
    </TableRow>

    <View
        android:layout_height="1dip"
        style="@style/alap_vonal" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_weight="0.1"
        style="@style/alap2"
        android:orientation="horizontal">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                style="@style/alap2"
                android:orientation="vertical">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/pidsz"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pid_text"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/pid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="90dp"
                        android:hint="n.a"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/rajtszamsz"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:text="@string/bib_text"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/rajtszam"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="90dp"
                        android:layout_marginTop="30dp"
                        android:hint="n.a"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/latitudeSz"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="60dp"
                        android:text="@string/latitude_text"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/latitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="90dp"
                        android:layout_marginTop="60dp"
                        android:text="0"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/longitudeSz"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="90dp"
                        android:text="@string/longitude_text"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/longitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="90dp"
                        android:layout_marginTop="90dp"
                        android:text="0"
                        android:textAppearance="?android:attr/textAppearanceMedium" />


                    <TextView
                        android:id="@+id/speedsz"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="120dp"
                        android:text="@string/speed_text"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/speed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="140dp"
                        android:layout_marginTop="120dp"
                        android:text="0"
                        android:textAppearance="?android:attr/textAppearanceMedium" />


                    <TextView
                        android:id="@+id/tvHeadingSz"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="150dp"
                        android:text="@string/heading_text"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/tvHeading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="140dp"
                        android:layout_marginTop="150dp"
                        android:text="0.0"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/megtettutSz"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="180dp"
                        android:text="@string/megtettut_text"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/megtettut"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="140dp"
                        android:layout_marginTop="180dp"
                        android:text="0.0"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/bojanev"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="210dp"
                        android:text="@string/bojanev_text"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/bojatav"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="140dp"
                        android:layout_marginTop="210dp"
                        android:text="0.0"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/altitudesz"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="240dp"
                        android:text="@string/altitude_text"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/altitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="140dp"
                        android:layout_marginTop="240dp"
                        android:text="0.0"
                        android:textAppearance="?android:attr/textAppearanceMedium" />


                </RelativeLayout>

            </LinearLayout>

        </ScrollView>
    </LinearLayout>

    <View
        android:layout_height="1dip"
        style="@style/alap_vonal" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageViewLetoltes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@android:drawable/ic_menu_upload" />

        <ImageView
            android:id="@+id/imageViewResults"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#66a3ff"
            android:src="@android:drawable/ic_menu_myplaces" />

        <ImageView
            android:id="@+id/imageViewSend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@android:drawable/ic_input_add" />

    </LinearLayout>


</TableLayout>

